Kubernetes/LocalAI/yamls/ig-localai.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: local-ai-traefik-https-redirect
  namespace: local-ai
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: local-ai-traefik-security
  namespace: local-ai
spec:
  headers:
    frameDeny: true
    sslRedirect: true
    browserXssFilter: true
    contentTypeNosniff: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 31536000
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: local-ai-traefik-websecure
  namespace: local-ai
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`local-ai.domain.com`)
      services:
      - name: local-ai
        port: 80
        serversTransport: local-ai-traefik-transport
      middlewares:
        - name: local-ai-traefik-security
  tls:
    secretName: local-ai-domain-com
    options:
      name: local-ai-traefik-tlsoptions
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: local-ai-traefik-web
  namespace: local-ai
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`local-ai.domain.com`)
      services:
      - name: local-ai
        port: 80
      middlewares:
        - name: local-ai-traefik-https-redirect
